--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis sit animi fuga quam aut ab possimus mollitia est saepe facere. Sequi repellat mollitia ipsum rem fugit quas laborum? Voluptatem, veritatis!</p>
+    <ul>
+        <li>Home</li>
+        <li>about us</li>
+        <li>contact us</li>
+    </ul>
 </body>
 </html>
